# civic-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  STRATEGY.md  civicwatch.db  fly.toml  pyproject.toml  requirements.txt
app/: civicweb_client.py  config.py  db.py  document_text.py  entities.py  graph.py  ingest.py  jobs.py  main.py  minutes.py  models.py  parser.py  schemas.py
app/api/: routes.py
app/classifiers/: topics.py
app/extractors/: __init__.py  zoning.py
app/models/: __init__.py
app/services/: civicweb_client.py
app/static/: index.html
app/utils/: text.py
samples/: Ordinance 2025-21 Lorey Property - Rezoning A-2 to R-1S.html  agenda_1408.json  agenda_items_sample.json  topic_classification_samples.json  zoning_extraction_samples.json
samples/Ordinance 2025-21 Lorey Property - Rezoning A-2 to R-1S_files/: all  css  hubs  meetingcontrolpanel  meetingcontrolpanel(1)  signalr
scripts/: dallas_county_extractor.py  dallas_county_parcel_extractor.py  test_parse_sample.py
tests/: test_api_contract.py  test_content_search_api.py  test_document_content_ingest.py  test_document_text_extractor.py  test_entities_api.py  test_entities_extractor.py  test_explorer_api.py  test_health.py  test_ingest_crawl.py  test_ingest_throttle.py  test_minutes_extractor.py  test_minutes_metadata_api.py  test_topic_filters_real_sample.py  test_topics.py  test_ui.py  test_zoning_extractor.py
